# financial-risk-data-platform

./: .dockerignore  .gitignore  .pre-commit-config.yaml  AGENTS.md  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml
.github/: CODEOWNERS
.github/workflows/: ci.yml  deploy.yml
config/: data_contracts.yaml  environments.yaml  storage.yaml
deploy/: README.md
docs/: agent-roles.md  agentic-workflows.md  architecture.md  aws-managed-databases.md  data-consistency-walkthrough.md  data-model.md  demo-script.md  elt-mapping.md  engineering-delivery-workflow.md  failure-scenarios.md  interview-stories.md  iteration-backlog.md  iteration-loop.md  lambda-s3-orchestration.md  mock-interview.md  operational-runbook.md  overnight-sandbox.md  performance-benchmark.md  postgres-mongodb-walkthrough.md  preparation-plan.md  security-protocols.md  source-document-mapping.md  tradeoffs.md
infra/terraform/: aurora.tf  database_networking.tf  documentdb.tf  ecr.tf  glue.tf  iam.tf  kinesis.tf  main.tf  rds.tf  s3.tf  variables.tf
mongo/init/: 01_demo_documents.js
scripts/: overnight_sandbox.py  replay_historical_as_live.py  security_check.py  seed_reference_data.py
sql/: consistency_checks.sql  curated_views.sql  data_quality_checks.sql  ops_queries.sql  postgres_demo_data.sql  postgres_schema.sql  risk_summary.sql
src/: __init__.py
src/analytics/: data_quality.py  returns.py  risk_metrics.py  volatility.py
src/benchmarks/: __init__.py  io_engine_benchmark.py
src/common/: config.py  exceptions.py  logging.py
tests/: storage_config_helpers.py
(+57 files in other folders)
