[project]
name = "financial-risk-data-platform"
version = "0.1.0"
description = "Production-style financial risk data platform scaffold"
readme = "README.md"
requires-python = ">=3.10"

dependencies = [
  "pydantic>=2.7",
  "pyyaml>=6.0",
  "pandas>=2.2",
  "numpy>=1.26",
  "duckdb>=0.10",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
  "ruff>=0.6",
  "mypy>=1.10",
  "pre-commit>=3.7",
]

[tool.ruff]
line-length = 100

[tool.mypy]
python_version = "3.11"
files = ["src", "tests"]
warn_unused_ignores = true
check_untyped_defs = true
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
